--- a/1604.01471/swap_v4.tex
+++ b/1604.01471/swap_v4.tex
@@ -308,7 +308,7 @@ We next define the unitary swapping operators
 	\hat{U}^{-,2}_{E}&= |e_+\rangle \langle e_+| + |e_-\rangle \langle e_2| + |e_2\rangle \langle e_-|.
 \end{eqnarray}
 %
-We note that these operators satisfy the envariance relations $\hat{U}^{+,-}_{E}\hat{U}^{+,-}_{\cal SE}|\psi'\rangle=|\psi'\rangle$ and $\hat{U}^{-,2}_{E}\hat{U}^{-,2}_{\cal SE}|\psi'\rangle=|\psi'\rangle$. As a result, one concludes from the standard envariance argument that ${\cal P}\left(|e_+\rangle \Big{|} |\psi'\rangle\right)={\cal P}\left(|e_-\rangle \Big{|} |\psi'\rangle\right)={\cal P}\left(|e_2\rangle \Big{|} |\psi'\rangle\right)$, and by Premise III, that ${\cal P}\left(|s_0\rangle \Big{|} |\psi'\rangle\right)=2 {\cal P}\left(|s_2\rangle \Big{|} |\psi'\rangle\right)=2/3$, as expected from the Born rule. A fully general treatment of the case of arbitrary coefficients was discussed in the original Born rule derivation, as well as in subsequent work in the field~\cite{zurek:03a,zurek:11}. 
+We note that these operators satisfy the envariance relations $\hat{U}^{+,-}_{E}\hat{U}^{+,-}_{\cal SE}|\psi'\rangle=|\psi'\rangle$ and $\hat{U}^{-,2}_{E}\hat{U}^{-,2}_{\cal SE}|\psi'\rangle=|\psi'\rangle$. As a result, one concludes from the standard envariance argument that ${\cal P}\big(|e_+\rangle \big{|} |\psi'\rangle\big)={\cal P}\big(|e_-\rangle \big{|} |\psi'\rangle\big)={\cal P}\left(|e_2\rangle \big{|} |\psi'\rangle\right)$, and by Premise III, that ${\cal P}\big(|s_0\rangle \big{|} |\psi'\rangle\big)=2 {\cal P}\big(|s_2\rangle \big{|} |\psi'\rangle\big)=2/3$, as expected from the Born rule. A fully general treatment of the case of arbitrary coefficients was discussed in the original Born rule derivation, as well as in subsequent work in the field~\cite{zurek:03a,zurek:11}. 
 
 %%%%%%%%
 \section{Additional remarks on Premises I-III:}
@@ -341,7 +341,7 @@ Our experimental verification therefore serves a very specific purpose: to show 
 %
 We note that the correlation established between system and ancilla states in Eq.~(\ref{eq:PreMeasurement2}) can be interpreted as having imprinted upon the ancilla kets a \textit{de facto} record of the corresponding state of the system. This is precisely consistent with the ancilla's having perceived the measurement outcome associated with the particular system state with which it is partnered, and therefore with its having \qo{recorded} the pre-measurement. One consequence of this interaction is therefore the apparent emergence of an \qo{eigenvalue-eigenstate link}, so that the connection between measurement outcomes and measured states need not be postulated separately from Premise III. \\
 
-\noindent {\bf 2. Null Schmidt coefficients:} A second candidate \qo{untested premise} so appeals to the intuition that it is easily overlooked. When represented in its Schmidt form, $|\psi\rangle = \sum_i c_i |s_i\rangle|\varepsilon_i\rangle$, a general bipartite quantum state contains kets $|s_k\rangle|\varepsilon_k\rangle$ for which the associated coefficients $c_k$ are equal to zero. Indeed, this is precisely the case for the state displayed in Eq.~(\ref{eq:PreMeasurement}), where, we have $c_1=c_2=1/\sqrt{2}$, $c_k=0$ for $k\geq3$. A careful reading of the derivation presented in the main text will reveal an additional tacit premise required by the BPR argument: states with null Schmidt coefficients were taken to be physically inadmissible, \textit{i.e.} $c_k=0$ was taken to indicate that the state $|s_k\rangle$ could never be observed upon measurement. This premise was called upon implicitly when it was suggested that the Born rule was satisfied by the relation ${\cal P}\left(|s_1\rangle {\Big |} |\psi_{\cal SE} \rangle \right)={\cal P}\left(|s_2\rangle {\Big |} |\psi_{\cal SE} \rangle \right)$, as it leads to the conclusion that ${\cal P}\left(|s_1\rangle {\Big |} |\psi_{\cal SE} \rangle \right)+{\cal P}\left(|s_2\rangle {\Big |} |\psi_{\cal SE} \rangle \right)=1$, from which the BPR follows. But to take the case $c_k=0$ to indicate the impossibility of observing outcome $|s_k\rangle$ is to assume, if only to a very limited degree, the Born rule \textit{a priori}. Should one conclude, then, that an additional premise ought to be tested in order to fully support the BPR derivation provided in the text?
+\noindent {\bf 2. Null Schmidt coefficients:} A second candidate \qo{untested premise} so appeals to the intuition that it is easily overlooked. When represented in its Schmidt form, $|\psi\rangle = \sum_i c_i |s_i\rangle|\varepsilon_i\rangle$, a general bipartite quantum state contains kets $|s_k\rangle|\varepsilon_k\rangle$ for which the associated coefficients $c_k$ are equal to zero. Indeed, this is precisely the case for the state displayed in Eq.~(\ref{eq:PreMeasurement}), where, we have $c_1=c_2=1/\sqrt{2}$, $c_k=0$ for $k\geq3$. A careful reading of the derivation presented in the main text will reveal an additional tacit premise required by the BPR argument: states with null Schmidt coefficients were taken to be physically inadmissible, \textit{i.e.} $c_k=0$ was taken to indicate that the state $|s_k\rangle$ could never be observed upon measurement. This premise was called upon implicitly when it was suggested that the Born rule was satisfied by the relation ${\cal P}\left(|s_1\rangle {\big |} |\psi_{\cal SE} \rangle \right)={\cal P}\left(|s_2\rangle {\big |} |\psi_{\cal SE} \rangle \right)$, as it leads to the conclusion that ${\cal P}\left(|s_1\rangle {\big |} |\psi_{\cal SE} \rangle \right)+{\cal P}\left(|s_2\rangle {\big |} |\psi_{\cal SE} \rangle \right)=1$, from which the BPR follows. But to take the case $c_k=0$ to indicate the impossibility of observing outcome $|s_k\rangle$ is to assume, if only to a very limited degree, the Born rule \textit{a priori}. Should one conclude, then, that an additional premise ought to be tested in order to fully support the BPR derivation provided in the text?
 %
 \sloppy
 Fortunately, the physical inadmissibility of states with null Schmidt coefficients has already been shown~\cite{zurek:08} to follow from the premises already tested during this experiment. In particular, arguments on envariance can be used to demonstrate that any envariantly swappable pair of states in the Schmidt representation of a bipartite quantum state must be equiprobable. For instance, if there exist $N$ terms in the Schmidt decomposition of a state $|\psi\rangle$ for which the associated prefactors $c_k=\alpha$, with $k=1,2,...,N$, one finds that
@@ -352,13 +352,14 @@ Fortunately, the physical inadmissibility of states with null Schmidt coefficien
 \end{eqnarray}
 %
 
-It follows from envariance arguments that ${\cal P}\left(|s_1\rangle \Big{|} |\psi\rangle\right)={\cal P}\left(|s_2\rangle \Big{|} |\psi\rangle\right)=...={\cal P}\left(|s_N\rangle \Big{|} |\psi\rangle\right)=p$, so that $P=Np$ is the probability of obtaining any one of the $N$ equally weighted states outside the sum in Eq.~(\ref{eq:nullschmidt1}). For the special case $\alpha=0$, we find that terms outside the sum in Eq.~(\ref{eq:nullschmidt1}) can be combined with impunity: for example, $0\left(|s_1\rangle|\varepsilon_1\rangle + |s_N\rangle|\varepsilon_N\rangle\right) = 0|s_{1'}\rangle|\varepsilon_{1'}\rangle$. If the state kets labelled $1$ and $N$ are combined in this way, one obtains
+It follows from envariance arguments that ${\cal P}\left(|s_1\rangle \big{|} |\psi\rangle\right)={\cal P}\left(|s_2\rangle \big{|} |\psi\rangle\right)=...={\cal P}\left(|s_N\rangle \big{|} |\psi\rangle\right)=p$, so that $P=Np$ is the probability of obtaining any one of the $N$ equally weighted states outside the sum in Eq.~(\ref{eq:nullschmidt1}). For the special case $\alpha=0$, we find that terms outside the sum in Eq.~(\ref{eq:nullschmidt1}) can be combined with impunity: for example, $0\left(|s_1\rangle|\varepsilon_1\rangle + |s_N\rangle|\varepsilon_N\rangle\right) = 0|s_{1'}\rangle|\varepsilon_{1'}\rangle$. If the state kets labelled $1$ and $N$ are combined in this way, one obtains
 %
-\begin{eqnarray}\label{eq:nullschmidt2}
-	|\psi\rangle=0\left(|s_{1'}\rangle|\varepsilon_{1'}\rangle + |s_2\rangle|\varepsilon_2\rangle + ... + |s_{N-1}\rangle|\varepsilon_{N-1}\rangle \right)+ \sum_{i=N+1}c_i |s_i\rangle|\varepsilon_i\rangle.
-\end{eqnarray}
+\begin{multline}\label{eq:nullschmidt2}
+	|\psi\rangle=0\left(|s_{1'}\rangle|\varepsilon_{1'}\rangle + |s_2\rangle|\varepsilon_2\rangle + ... + |s_{N-1}\rangle|\varepsilon_{N-1}\rangle \right)
+	\\  + \sum_{i=N+1}c_i |s_i\rangle|\varepsilon_i\rangle. \qquad\quad
+\end{multline}
 %
-The combination of $|s_1\rangle|\varepsilon_1\rangle$ and $|s_N\rangle|\varepsilon_N\rangle$ that leads to Eq.~(\ref{eq:nullschmidt2}) cannot have any physical consequences, however, as it merely involves a mathematical rearrangement of the state $|\psi\rangle$. Consequently, the total probability associated with the kets outside the summation must still be equal to the analogous probability in Eq.~(\ref{eq:nullschmidt2}), but there are now only $N-1$ such terms, all of which must be still be assigned an equal probability based upon envariance arguments. Hence, we must now have ${\cal P}\left(|s_{1'}\rangle \Big{|} |\psi\rangle\right)={\cal P}\left(|s_2\rangle \Big{|} |\psi\rangle\right)=...={\cal P}\left(|s_{N-1}\rangle \Big{|} |\psi\rangle\right)=p$, but $P=p(N-1)$. By equating the total probabilities $P$ assigned to the states outside the sums in Eqs.~(\ref{eq:nullschmidt1}) and (\ref{eq:nullschmidt2}), one finds that $pN=p(N-1)$, which can be satisfied only for $p=0$.
+The combination of $|s_1\rangle|\varepsilon_1\rangle$ and $|s_N\rangle|\varepsilon_N\rangle$ that leads to Eq.~(\ref{eq:nullschmidt2}) cannot have any physical consequences, however, as it merely involves a mathematical rearrangement of the state $|\psi\rangle$. Consequently, the total probability associated with the kets outside the summation must still be equal to the analogous probability in Eq.~(\ref{eq:nullschmidt2}), but there are now only $N-1$ such terms, all of which must be still be assigned an equal probability based upon envariance arguments. Hence, we must now have ${\cal P}\left(|s_{1'}\rangle \big{|} |\psi\rangle\right)={\cal P}\left(|s_2\rangle \big{|} |\psi\rangle\right)=...={\cal P}\left(|s_{N-1}\rangle \big{|} |\psi\rangle\right)=p$, but $P=p(N-1)$. By equating the total probabilities $P$ assigned to the states outside the sums in Eqs.~(\ref{eq:nullschmidt1}) and (\ref{eq:nullschmidt2}), one finds that $pN=p(N-1)$, which can be satisfied only for $p=0$.
 %
 \begin{figure*}[t]
 	\centering
