--- a/2101.04168/TWF_1-50_arxiv_1.tex
+++ b/2101.04168/TWF_1-50_arxiv_1.tex
@@ -28,7 +28,7 @@ bookmarksopenlevel=10
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \tolerance=2000
 \hbadness=2000
-\usepackage[small]{titlesec}
+%\usepackage[small]{titlesec}
 
 \input{../helpers/fix-underbrace.tex}
 %\input{../helpers/psu-sc-headers.tex}
