--- a/gr-qc-9710008/RovelliLivrev.tex
+++ b/gr-qc-9710008/RovelliLivrev.tex
@@ -17,15 +17,51 @@
 %															%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentstyle[aps,epsfig]{revtex}
+\documentclass[12pt]{article}
 \newcommand{\comment}[1]{{}}
 \newcommand{\key}[1]{{}}
 \bibliographystyle{livrev}
+\usepackage{graphicx} 
+\usepackage{microtype} 
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/minion_sum}
+\input{../helpers/fix-underbrace.tex}
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \begin{document}
-
- \twocolumn[\hsize\textwidth\columnwidth\hsize\csname
- @twocolumnfalse\endcsname
 
 \title{Loop Quantum Gravity\\
 {\em (Review written for the electronic journal LIVING REVIEWS\/)}}
@@ -37,10 +73,10 @@
  rovelli@pitt.edu
  }
 \date{September 29, 1997}
-\maketitle\vskip.5cm
 
-                    {\bf Abstract}
+\maketitle
 
+\begin{abstract}
 The problem of finding the quantum theory of the gravitational field, 
 and thus understanding what is quantum spacetime, is still open.  One 
 of the most active of the current approaches is loop quantum gravity.  
@@ -49,7 +85,7 @@ non-perturbative and background independent quantization of general
 relativity, with its conventional matter couplings.  The research in 
 loop quantum gravity forms today a vast area, ranging from 
 mathematical foundations to physical applications.  Among the most 
-significative results obtained are: (i) The computation of the 
+significant results obtained are: (i) The computation of the 
 physical spectra of geometrical quantities such as area and volume; 
 which yields quantitative predictions on Planck-scale physics.  (ii) A 
 derivation of the Bekenstein-Hawking black hole entropy formula.  
@@ -66,9 +102,8 @@ proposals, which are intensely debated.  Here, I provide a general
 overview of ideas, techniques, results and open problems of this 
 candidate theory of quantum gravity, and a guide to the relevant 
 literature.
-
-\vskip1cm
-]
+\end{abstract}
+\newpage
 
 \section{Introduction}
 
@@ -1561,7 +1596,7 @@ virtual links. See Figure \ref{TheVirtualNode}.
 
 \begin{figure}
 $$
-\begin{array}{c}\mbox{\epsfig{file=RovelliFig1.eps}}\end{array}
+\begin{array}{c}\mbox{\includegraphics{RovelliFig1.eps}}\end{array}
 $$
 \caption{Construction of ``virtual'' nodes and ``virtual''
 links over an $n$-valent node.}
@@ -2186,13 +2221,13 @@ spacetime evolution of the elementary action of the hamiltonian
 constraint, given in Figure 2.
 
 \begin{figure} 
-\centerline{\mbox{\epsfig{file=RovelliFig2.eps}}} 
+\centerline{\mbox{\includegraphics{RovelliFig2.eps}}} 
 \caption{The elementary vertex.} 
 \end{figure}
 
 An example of a surface in the sum is given in Figure 4.
 
-\begin{figure} \centerline{\mbox{\epsfig{file=RovelliFig3.eps}}}
+\begin{figure} \centerline{\mbox{\includegraphics{RovelliFig3.eps}}}
  \caption{A term of second order.}
 \end{figure}
 
@@ -2699,8 +2734,8 @@ symmetry''.  This covariantisation amount to adding to the vertex
 described in Figure 3 the vertices, described in Figure 5, which 
 are simply obtained by re-orienting Figure 3 in spacetime.
  \begin{figure}
- \centerline{\mbox{\epsfig{file=RovelliFig4.eps}} \hskip1cm 
- \mbox{\epsfig{file=RovelliFig5.eps}}}
+ \centerline{\mbox{\includegraphics{RovelliFig4.eps}} \hskip1cm 
+ \mbox{\includegraphics{RovelliFig5.eps}}}
  \caption{The crossing symmetric vertices.}
  \end{figure}
 
