--- a/gr-qc-0507038v2/gr-qc-0507038v2.tex
+++ b/gr-qc-0507038v2/gr-qc-0507038v2.tex
@@ -17,6 +17,43 @@
 
 \usepackage{amsmath}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
 \usepackage{graphicx}
 \usepackage{epsfig}
 \def\ba{\begin{eqnarray}}
@@ -257,7 +294,7 @@ the theory. Since the theory is described by a Hamiltonian
 formalism, this means that the 4-dim spacetime $M$ is of the form
 $M=\Sigma\times\mathbb{R}$, where $\Sigma$ is a 3-dimensional
 manifold. The first thing to do is to start with the
-geometrodynamical phase space $\G_{\rm g}$ of Riemannian metrics
+geometrodynamical phase space $\G_{\!\rm g}$ of Riemannian metrics
 $q_{ab}$ an $\Sigma$ and their canonical momenta
 $\tilde{\pi}^{ab}$ (related to the extrinsic curvature $K_{ab}$ of
 $\Sigma$ into $M$  by
@@ -291,7 +328,7 @@ which corresponds to the two polarizations of the gravitational
 field.
 
 In order to arrive at the connection formulation, we need first to enlarge
-the phase space $\G_{\rm g}$ by considering not metrics $q_{ab}$ but the
+the phase space $\G_{\!\rm g}$ by considering not metrics $q_{ab}$ but the
  co-triads $e_a^i$ that define the metric by,
 \be q_{ab}=e_a^i\,e_b^j\,\delta_{ij} \ee where $i,j=1,2,3$ are
 internal labels for the frames. These represent 9 variables
