--- a/1504.07100/Paper_QHT_final_corrected_II.tex
+++ b/1504.07100/Paper_QHT_final_corrected_II.tex
@@ -1,11 +1,9 @@
-
-
-
-\documentclass[letterpaper,11pt]{article}
+\documentclass[12pt]{article}
 
 %\documentclass[12pt]{article}
 %\documentclass[12pt,amssymb,amscd]{article}
 %\documentstyle[12pt,amssymb,amscd,oldgerm]{amsart}  % amslatex
+\usepackage[noBBpl,sc]{mathpazo}
 
 \usepackage{scrextend}
 \usepackage{amsmath,amssymb,epsfig,bbm}
@@ -15,6 +13,44 @@
 \usepackage{MnSymbol}
 \usepackage{slashed}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+%\input{../helpers/cmrsum}
+%\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 %MINE NEW.COM:
 
 \usepackage{color}
@@ -296,7 +332,7 @@ We use the Dirac type operator, which provides a metric structure over the space
 
 %\section{NOTES}
 
-%Alle spatial indices skal v¾re $\m\n$ og ikke $mn$.
+%Alle spatial indices skal vï¿½re $\m\n$ og ikke $mn$.
 
 %tjek at $\xi_{(A,E)}$ i Johannes' del ikke allerede ER defineret ...
 
@@ -342,7 +378,7 @@ We use the Dirac type operator, which provides a metric structure over the space
 %\item
 %skriv noget om hvor non-continuous the trace is...
 %\item
-%udskift $\sigma$ med $\tau$ - det f¿rste er Pauli matricer, det andet er 'i' gange ...
+%udskift $\sigma$ med $\tau$ - det fï¿½rste er Pauli matricer, det andet er 'i' gange ...
 %\end{itemize}
 
 %\newpage
@@ -1774,7 +1810,7 @@ We are now going to consider the dynamics of general relativity, which in the fo
 \begin{equation}
 H(N)= \int_M d^3x N 
   \e^{ab}_{\;\;c} F^c_{\m\n} E^\m_a E^\n_b \;,
-\label{DYBB¯L}
+\label{DYBBï¿½L}
 \end{equation}
 where 
 %
@@ -1783,7 +1819,7 @@ The diffeomorphism constraint has the form
 \begin{equation}
 D(\bar{N})= \int_M d^3x   N^\n
  F^c_{\m\n} E^\m_c \;,
-\label{DYBB¯L2}
+\label{DYBBï¿½L2}
 \end{equation}
 where $N^\n$ is the shift field. %, and finally the Gauss constraint reads
 %$$
@@ -1896,7 +1932,7 @@ With this we can now
 \lim_{\kappa\rightarrow 0}\lim_{n\rightarrow\infty} \kappa^{-2}  \left\langle \xi_n \vert   \mathds{h}_n  \vert \xi_n \right\rangle = \int_M d^3x  \Big( E_a^\m E^\n_b F_{\m\n}^c \e^{ab}_{\;\;\;c}\Big)\;.
 \label{dynamics}
 \end{equation}
-Comparing this to equation (\ref{DYBB¯L}) we see that the densitized Hamiltonian of general relativity emerges in the semi-classical limit. \\
+Comparing this to equation (\ref{DYBBï¿½L}) we see that the densitized Hamiltonian of general relativity emerges in the semi-classical limit. \\
 %The only discrepancy is a missing factor of $e^{-1}$, which would be needed for the integral in (\ref{dynamics}) to be invariant. \\
 
 The particular form of the operator (\ref{cur}) must be rooted in symmetry considerations. Without going into details let us here just note that it seems to be invariant under a symmetry that involves a change of orientation of $M$ as well as a gauge transformation of the "connections" $R_n$ and $L_n$.  It seems natural that the operator (\ref{cur}) should have the canonical form
@@ -3751,7 +3787,7 @@ The commutator $[\mathds{D}(\bar{N}),\mathds{H}(N)]$ exhibits similar anomalies 
 
 
 
-
+\raggedright
 
 %\cite{Ashtekar:1986yd}
 \bibitem{Ashtekar:1986yd}
