--- a/0802.1784/math_paper_simplexes_6.tex
+++ b/0802.1784/math_paper_simplexes_6.tex
@@ -36,6 +36,7 @@ bookmarksopenlevel=10
 
 \usepackage[small]{titlesec}
 \usepackage{cite}
+\input{../helpers/cmrsum}
 
 % make sure there is enough TOC for reasonable pdf bookmarks.
 \setcounter{tocdepth}{3}
