--- a/0802.1783/Paper_simplexes_12.tex
+++ b/0802.1783/Paper_simplexes_12.tex
@@ -320,7 +320,7 @@ A semi-finite spectral triple over a space of connections is presented. The trip
 \newpage
 \section{Introduction}
 
-Ever since the discovery of the Standard Model of Particle Physics physicists have worked to understand the apparently arbitrary structure of this theory. Natures choice of gauge group, the Higgs sector, the 20-30 apparently unrelated parameters etc. almost begs for a deeper explanation.
+Ever since the discovery of the Standard Model of Particle Physics physicists have worked to understand the apparently arbitrary structure of this theory. Nature's choice of gauge group, the Higgs sector, the 20-30 apparently unrelated parameters etc. almost begs for a deeper explanation.
 
 With the pioneering work of Alain Connes and co-workers on the Standard Model \cite{ConnesBook}-\cite{Chamseddine:2007ia} such an explanation now appears to emerge. In Connes' work the Standard Model coupled to General Relativity is expressed as a single gravitational theory. 
 The language used for this unification is Noncommutative Geometry \cite{ConnesBook}.
