--- a/1703.02470/J-Kouneiher.tex
+++ b/1703.02470/J-Kouneiher.tex
@@ -1,6 +1,37 @@
 \documentclass[12pt]{article}
-\usepackage[a4paper,left=2cm,right=1.2cm,top=3cm,bottom=4cm]
-{geometry}
+
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+
 \usepackage{amsmath,amstext, amsthm, empheq, extpfeil,  
 amsbsy,amssymb,marvosym,fancyhdr,graphicx,amscd,amsfonts,latexsym,delarray,stackrel,lineno,color,cite,appendix,xcolor,url,hyperref}
 \usepackage{wasysym}
@@ -456,9 +487,13 @@ amsbsy,amssymb,marvosym,fancyhdr,graphicx,amscd,amsfonts,latexsym,delarray,stack
 \begin{document}
 \title{Geometry and the Quantum}
 \author{Alain Connes}
-%\date{}
+\date{7 Mar 2017}
 \maketitle
+
+\newpage
 \tableofcontents 
+\newpage
+
 \section{Introduction}
 The ideas of noncommutative geometry are deeply rooted in both physics, with the predominant influence of the discovery of Quantum Mechanics, and in mathematics where it emerged from the great variety of examples of ``noncommutative spaces" \ie of geometric spaces which are best encoded algebraically  by a  noncommutative algebra. 
 
